get user route
